# sharp-ev-picks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/memory/: decisions.md  pitfalls.md
.codex/: hooks.json
.codex/agents/: data-engineer.toml  database-architect.toml  docker-devops-engineer.toml  documentation-writer.toml  football-modeling-engineer.toml  ml-engineer.toml  nba-modeling-engineer.toml  odds-ingestion-engineer.toml  python-backend-engineer.toml  quant-sports-researcher.toml  repo-researcher.toml  risk-kelly-engineer.toml  security-reviewer.toml  test-engineer.toml  vig-edge-math-engineer.toml
.codex/hooks/: post_edit_format.sh  post_edit_pytest.sh  pre_bash_guard.sh  pre_commit_secret_scan.sh  stop_memory_reminder.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2d37faf2d3fd_picks_has_snapshot_close_anchor_book_.py  a1b2c3d4e5f6_odds_snapshots_market_widen_64.py  a7e3c1b9f204_dashboard_credentials.py  b1d4f7a9c2e6_result_tracking_final_score.py  b2c3d4e5f6a7_picks_devig_fallback_provenance.py  bc9e18be0148_initial_14_table_warehouse.py  c2a7e4f1b8d6_events_scraped_score.py  c5e9a1f3b7d2_picks_policy_fingerprint.py  e1a4d9c7b3f5_picks_close_independent_of_fill.py  e808241b136f_picks_revalidation_attempted_at.py  f3a1c2d4e5b6_events_starts_at_nullable.py
app/: clv_trueup.py  config.py  database.py  main.py  observability.py  pipeline.py  scheduler.py
app/api/: auth.py  dashboard.html  deps.py  routes.py
app/backtesting/: calibration.py  clv.py  engine.py  live_evidence.py  walkforward.py
app/edge/: confidence.py  detector.py  gates.py  value.py  value_policy.py
app/ingestion/: base.py  beatthebookie.py  beatthebookie_series.py  betfair_api.py  betfair_exchange.py  espn_scores.py  football_data.py  international_results.py  nfl_data.py  odds_api.py  oddspapi.py  oddsportal.py  oddsportal_bookmakers.py  oddsportal_json.py  oddsportal_json_session.py  pinnacle_arcadia.py  sbr_nba.py  tennis_data.py
app/maintenance/: __init__.py  calibration_drift.py  self_audit.py  upstream_watch.py  wrong_game_audit.py
app/models/: ah_bridge.py  base.py  football_dc.py  value_filter.py
app/notifications/: base.py  telegram.py  webhook.py
app/probabilities/: devig.py  implied.py
app/resolution/: __init__.py  aliases_seed.json  matching.py  shadow.py
app/risk/: exposure.py  staking.py
app/schemas/: base.py  events.py  odds.py  picks.py
app/settlement/: __init__.py  engine.py  outcomes.py  results.py
app/storage/: models.py  repositories.py
docs/: HOW_TO_RUN.md  SUMMARY.md  architecture.md  db-schema.md  roadmap.md
docs/adr/: adr-0000-template.md  adr-0001-memory-system.md  adr-0002-manual-betting-only.md  adr-0003-hooks-design.md  adr-0004-football-model.md  adr-0005-nba-model.md  adr-0006-devig-per-market.md  adr-0007-scheduler-apscheduler.md  adr-0008-db-sqlalchemy-async.md  adr-0009-gbm-default.md  adr-0010-free-odds-ingestion.md  adr-0011-direct-dependencies.md  adr-0012-direct-engine-binding.md  adr-0013-pinnacle-arcadia-archive.md  adr-0015-betfair-exchange-back-odds-capture.md  adr-0018-sentry-error-monitoring.md  adr-0019-sharp-vs-soft-optimization-preregistration.md  adr-0020-clv-anchor-close-venue-independence.md
docs/backtesting/: findings.md  value-findings.md
docs/deployment/: README.md  mac-local.md  openclaw-ubuntu.md  ubuntu-openclaw.md
docs/plans/: goal-2026-06-20-multisport.md
docs/research/: 2026-06-28-backtest-data-and-build-plan.md  2026-06-30-roi-pick-quality-review.md  betting-repo-research.md  calibration-haircut-decision-2026-06-24.md  (+22 more)
scripts/: backtest.py  beatthebookie_backtest.py  docker_entrypoint.sh  master_demo.py  merge_betfair_bsp.py  nba_backtest.py  penaltyblog_bakeoff.py  per_league_clv.py  run_app.sh  run_live.py  run_settle_now.py  safety_audit.sh  upgrade_deps.sh  value_backtest.py  value_picks.py  world_cup_picks.py
tests/: conftest.py  test_ah_bridge.py  test_api.py  test_app_ops.py  test_auth.py  test_backtest.py  test_backtest_honesty.py  test_beatthebookie.py  test_beatthebookie_series.py  test_betfair_api.py  test_betfair_clv_consumption.py  test_betfair_exchange.py  test_betfair_targets.py  test_btb_dataset.py  test_calibration.py  test_calibration_drift.py  test_calibration_walkforward.py  test_calibrator_bakeoff.py  test_clv.py  test_clv_trueup.py  test_confidence.py  test_config.py  test_devig.py  test_devig_properties.py  test_edge.py  test_espn_scores.py  test_event_directory_precedence.py  test_exposure.py  test_football_ah_visibility.py  test_football_dc.py  test_ingestion.py  test_international_results.py  test_kelly.py  test_kelly_properties.py  test_live_evidence.py  test_nba_backtest.py  test_nfl_data.py  test_notifications.py  test_observability.py  test_odds_snapshot_persistence.py  (+56 more)
(+31 files in other folders)
