[project]
name = "betting-ai"
version = "0.1.0"
description = "Manual-betting +EV picks decision-support platform (Football/Soccer + NBA). Picks only — this system never places bets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "redis>=5.0",
    "tenacity>=8.3",
]

# Proven third-party engines used DIRECTLY (ADR-0011, user direction
# 2026-06-10) — installed per phase: `uv sync --extra football` etc.
[project.optional-dependencies]
football = ["penaltyblog>=1.11"]
nba = ["nba_api>=1.4"]
models = ["lightgbm>=4.3", "xgboost>=2.0"]
backfill = ["oddsharvester>=0.3"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "fakeredis>=2.23",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "fakeredis.*", "scipy.*"]
ignore_missing_imports = true
