[project]
name = "betting-ai"
version = "0.1.0"
description = "Manual-betting +EV picks decision-support platform (Football/Soccer + NBA). Picks only — this system never places bets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "redis>=5.0",
    "tenacity>=8.3",
]

# Proven third-party engines used DIRECTLY (ADR-0011, user direction
# 2026-06-10) — installed per phase: `uv sync --extra football` etc.
[project.optional-dependencies]
football = ["penaltyblog>=1.11"]
nba = ["nba_api>=1.4"]
# nflreadpy (nflverse, MIT): read-only NFL schedules/scores/CONSENSUS lines for
# the screen-only NFL data spine (app/ingestion/nfl_data.py). Pulls polars +
# pyarrow transitively; loaded in a worker thread, GET-only, never an order venue.
nfl = ["nflreadpy>=0.1"]
models = ["lightgbm>=4.3", "xgboost>=2.0"]
# EXACT pin: app/ingestion/oddsportal.py patches six 0.3.0 internals at
# runtime; _patch_upstream_quirks hard-fails on any other version.
backfill = ["oddsharvester==0.3.0"]
ml = [
    "lightgbm>=4.6.0",
    # pandas is a DIRECT dependency of scripts/ml/* and of the
    # app/models/value_filter.py scorer (lazy import) — previously it only
    # arrived transitively via the football extra (penaltyblog).
    "pandas>=2.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    # v2 challenger (scripts/ml/train_value_filter_v2.py): hist + native
    # categoricals + monotone_constraints dict-by-name need 3.x; 3.2 adds
    # pandas-3.0 compat (we run pandas 3.0.3).
    "xgboost>=3.2",
]
# scripts/sports/tennis_backtest.py reads tennis-data.co.uk .xlsx files, which
# need pandas + the openpyxl engine. Declared so `uv run --extra backtest ...`
# works on a base install (pandas otherwise only arrives via ml/football).
backtest = ["pandas>=2.2", "openpyxl>=3.1"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "fakeredis>=2.23",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic's generated layout: env.py configures sys.path/config before
# imports (E402); autogenerated DDL in versions/ carries long literal lines.
"alembic/env.py" = ["E402"]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "fakeredis.*", "scipy.*", "oddsharvester.*", "penaltyblog.*", "pandas.*"]
ignore_missing_imports = true
